# nanotech_price

./: README.md  pyproject.toml  requirements.txt
pricelist_project/: db.sqlite3  manage.py
pricelist_project/main/: apps.py  models.py  urls.py  views.py
pricelist_project/main/migrations/: 0001_initial.py
pricelist_project/main/static/main/css/: main.css
pricelist_project/main/templates/main/: index.html
pricelist_project/members/: views.py
pricelist_project/members/templates/authenticate/: login.html
pricelist_project/pricelist_project/: asgi.py  settings.py  urls.py  wsgi.py
pricelist_project/products/: forms.py  models.py  urls.py  views.py
pricelist_project/products/migrations/: 0001_initial.py  0002_category_image.py  0003_product_custom_id.py  0004_alter_product_custom_id.py
pricelist_project/products/static/products/css/: main.css
pricelist_project/products/templates/products/: category_list.html  create_category.html  create_product.html  delete_product.html  index.html  product_list.html  search_list.html  update_product.html
