[project]
name = "thepriceproject"
version = "0.1.0"
description = ""
authors = [
    {name = "iabdurahmon",email = "abdurahmon15122006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
